# doing

./: .gitignore  LICENSE  README.md  build.doing  makefile.txt
Doing/: Doing.csproj  Doing.sln  Program.cs
doc/: GoLaTex.tex  Main.tex
docs/: Back.tex  GoLaTex.tex  Main.tex
doing/: .gitignore  BuildFile.cs  CMakeLists.txt  IRunner.cs  NativeRunner.cs  Printer.cs  Program.cs  Rule.cs  Run.cs  Target.cs  TaskInfo.cs  build.cpp  build.doing  config.hpp.in  doing.cpp  doing.csproj  doing.hpp  doing.sln
doing/Algorithm/: TopSort.cs
doing/Api/: DoingExpandAttribute.cs  IMacroApi.cs  MacroAttribute.cs
doing/Exception/: GrammaticalException.cs  PretreatmentException.cs
doing/Expand/: ExpandManager.cs
doing/Inner/Macro/: Control.cs  Def.cs  If.cs  MacroTool.cs  Os.cs  OsDef.cs  Print.cs  Sh.cs  String.cs
doing/Properties/: launchSettings.json
doing/ThreadPool/: ThreadPool.cs
doing/Tool/: StringIterator.cs  tool.cpp  tool.hpp
doing/doing/: Program.cs  doing.csproj  make.doing
doing/doing/Algorithm/: Topological.cs
doing/doing/Cmdlet/: CheckCompiler.cs  CheckOS.cs  Cmdlet.cs  GetVersion.cs  IncrementalCompilation.cs  StandardCmdlet.cs  System.cs  Target.cs  Variable.cs  VersionControl.cs
doing/doing/DException/: RuntimeException.cs
doing/doing/Engine/: DHost.cs  Parser.cs  Parsing.cs  PowerShellEngine.cs  Runner.cs  Runspace.cs  Target.cs  Utility.cs  Worker.cs  WorkerManager.cs
doing/doing/Exception/: RuntimeException.cs
doing/doing/Properties/: launchSettings.json
doing/doing/Tool/: ErrorHelper.cs  Printer.cs
doing/parser/: parser.hpp
(+69 files in other folders)
